<resources>
    <string name="app_name">Smart Unread</string>
    <string name="activity_name">Unread</string>
    <string name="activity_title">@string/app_name</string>

    <string name="shadespace_text_charged">Fully charged</string>
    <string name="shadespace_text_charging">Charged to %1$d%%</string>
    <string name="title_missing_notification_access">Notification access needed</string>
    <string name="title_change_settings">Change settings</string>
    <string name="icon_badging_service_title">@string/app_name</string>
    <string name="shadespace_subtext_double" translatable="false">%1$s – %2$s</string>

    <string name="category_text">Font</string>
    <string name="pref_google_sans">Google Sans</string>
    <string name="pref_google_sans_desc">Override device font with Google Sans</string>
    <string name="pref_ucfirst">Capitalize</string>
    <string name="pref_ucfirst_desc">Always start with a capital letter</string>
    <string name="pref_double_title">Large title</string>
    <string name="pref_double_title_desc">Use two lines to display long titles</string>

    <string name="category_content">Content</string>
    <string name="pref_current_date">Current date</string>
    <string name="pref_current_date_desc">Show the current date</string>
    <string name="pref_charging_perc">Charging percentage</string>
    <string name="pref_charging_perc_desc">Show the battery percentage while charging</string>
    <string name="pref_silent_notifs">All notifications</string>
    <string name="pref_silent_notifs_desc">Also show low priority notifications</string>
    <string name="widget_style_shade">Shade Style</string>
    <string name="widget_style_oxygen">Oxygen Style</string>
    <string name="pref_greeting">Custom greeting message</string>
    <string name="pref_greeting_desc">Displayed when there is no information to show</string>
</resources>
