<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/category_text">

        <SwitchPreference
            android:key="pref_google_sans"
            android:title="@string/pref_google_sans"
            android:summary="@string/pref_google_sans_desc"
            android:defaultValue="true" />

        <SwitchPreference
            android:key="pref_ucfirst"
            android:title="@string/pref_ucfirst"
            android:summary="@string/pref_ucfirst_desc"
            android:defaultValue="true" />

        <SwitchPreference
            android:key="pref_double_title"
            android:title="@string/pref_double_title"
            android:summary="@string/pref_double_title_desc"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/category_content">

        <SwitchPreference
            android:key="pref_current_date"
            android:title="@string/pref_current_date"
            android:summary="@string/pref_current_date_desc"
            android:defaultValue="true" />

        <SwitchPreference
            android:key="pref_charging_perc"
            android:title="@string/pref_charging_perc"
            android:summary="@string/pref_charging_perc_desc"
            android:defaultValue="true" />

        <SwitchPreference
            android:key="pref_silent_notifs"
            android:title="@string/pref_silent_notifs"
            android:summary="@string/pref_silent_notifs_desc"
            android:defaultValue="true" />

        <amirz.library.settings.TextPreference
            android:key="pref_greeting"
            android:title="@string/pref_greeting"
            android:summary="@string/pref_greeting_desc" />

    </PreferenceCategory>

</PreferenceScreen>
